60: Delete blog server
